<resources>

    <string name="app_name">ProNotes</string>

    <!-- Nav Drawer Strings -->
    <string name="nav_home">Home</string>
    <string name="nav_all">All Notes</string>
    <string name="nav_archive">Archive</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_about">About Us</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

    <string name="nav_open">Open Navigation</string>
    <string name="nav_close">Close Navigation</string>

    <!-- Supported Languages -->
    <string-array name="languages">
        <item>English</item>
        <item>Francais</item>
        <item>عربي</item>
    </string-array>

    <!-- Extracted Strings -->
    <string name="app_logo">ProNotes Logo</string>
    <string name="name">Name</string>
    <string name="enter_name_here">Enter name</string>
    <string name="password">Password</string>
    <string name="enter_password_here">Enter password</string>
    <string name="login">Login</string>
    <string name="login_as_guest_instead">Login As Guest</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="retry">Retry</string>
    <string name="languages_icon">Languages Icon</string>
    <string name="light_mode">Light Mode</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="guest">Guest</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back">Welcome back</string>
    <string name="sign_up">Sign Up</string>
    <string name="username_already_exists">Username already exists</string>
    <string name="your_password_should_be_at_least_8_characters_long">Your password should be at least 8 characters long</string>
    <string name="high_priority">High</string>
    <string name="mid_priority">Medium</string>
    <string name="low_priority">Low</string>
    <string name="add_a_note">Add a note</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="about_the_app">About The App</string>
    <string name="about_the_app_description">ProNotes is a simple note taking app to help you manage your notes on the fly with the ease of your mobile. This project has been completed as part of the CSC431 (Mobile Applications) course requirements.</string>
    <string name="about_the_developer">About The Developer</string>
    <string name="about_the_developer_description">Mahmoud Joumaa is an undergraduate student at the Lebanese American University at the time of writing this briefing. He is still new to the world of mobile development at the time of working on this app.</string>

    <string name="send_to">Please choose an app from the below options</string>
    <string name="sign_up_successful">Sign Up successful</string>

</resources>