<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/nav_all"
            android:title="@string/nav_all" />

        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/nav_archive"
            android:title="@string/nav_archive" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/nav_favorites"
            android:title="@string/nav_favorites" />

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/nav_about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/nav_settings" />

    </group>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/nav_logout"
            android:title="@string/nav_logout" />

    </group>

</menu>