<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".SettingsFragment"
    android:padding="@dimen/general_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/light_mode"
            android:layout_width="@dimen/settings_icons"
            android:layout_height="@dimen/settings_icons"
            android:contentDescription="@string/light_mode"
            android:src="@drawable/settings_light"
            app:tint="@color/orange" />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_toggle"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/settings_icons" />

        <ImageView
            android:id="@+id/dark_mode_dark"
            android:layout_width="@dimen/settings_icons"
            android:layout_height="@dimen/settings_icons"
            android:contentDescription="@string/dark_mode"
            android:src="@drawable/settings_dark"
            android:visibility="gone"
            app:tint="@color/midnight_blue" />

        <ImageView
            android:id="@+id/dark_mode_light"
            android:layout_width="@dimen/settings_icons"
            android:layout_height="@dimen/settings_icons"
            android:contentDescription="@string/dark_mode"
            android:src="@drawable/settings_dark"
            android:visibility="gone"
            app:tint="@color/silver" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <ImageView
        android:layout_width="@dimen/settings_icons"
        android:layout_height="@dimen/settings_icons"
        android:src="@drawable/settings_language"
        android:contentDescription="@string/languages_icon"
        app:tint="@color/wisteria" />
        <Spinner
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_icons"
            android:entries="@array/languages"
            android:gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>